--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "node": "12.* || 14.* || >= 16"
   },
   "ember-addon": {
-    "main": "src/ember-addon-main.js"
+    "main": "src/ember-addon-main.js",
+    "before": "ember-google-maps"
   },
   "volta": {
     "node": "16.14.2",
